--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <link rel="stylesheet" href="assets/css/bootstrap.css" />
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://kit.fontawesome.com/7707549cbe.js" crossorigin="anonymous"></script>
     <script nonce="068b6b05-aaa3-4ac9-a5fb-5062fadd7407">
         (function(w, d) {
             ! function(a, e, t, r) {
@@ -549,8 +550,13 @@
                                     <div class="wantToWork-caption text-center">
                                         <h2>Let's discuss about your interior</h2>
                                         <p>Even the all-powerful Pointing has no control about the <br> blindtexts it is an almost unorthographic.</p>
-                                        <a href="#" class="btn_2 wantToWork-btn">Contact Us</a>
-                                        <a href="#" class="btn_1 "><i class="fas fa-phone-alt"></i>+91 9999 999999</a>
+
+                                        <a href="tel:+919819095108" class="btn_1 "><i class="fa-solid fa-phone fa-xl"></i>+91 9999 999999</a>
+
+                                        <a href="https://api.whatsapp.com/send?phone=919819095108&text=Hey%20MakeMyInterior!" class="btn_3 "><i class="fa-brands fa-whatsapp fa-xl"></i> Get in touch</a>
+                                        <a href="https://g.page/make-my-interiors-maharashtra?" class="btn_4 "><i class="fa-solid fa-location-dot fa-xl"></i> Locate us</a>
+                                        <a href="mailto:info@makemyinteriors.in" class="btn_2 "><i class="fa-solid fa-envelope fa-xl"></i> </a>
+
                                     </div>
                                 </div>
                             </div>
@@ -614,9 +620,9 @@
         </section>
     </footer>
 
-    <div id="back-top">
+    <div id="whatsapp-float">
         <a title="send message" href="https://api.whatsapp.com/send?phone=919819095108&text=Hey%20MakeMyInterior!">
-            <i class="fas fa-level-up-alt"></i>
+            <i class="fa-brands fa-whatsapp fa-xl my-float"></i>
         </a>
     </div>
 
