--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
                         <div class="col-lg-12">
                             <div class="more-pro theme-bg1 pt-30 pb-20">
                                 <div class="more-show text-center">
-                                    <a href="work.html" class="border-btn ">More Work</a>
+                                    <a href="about.html" class="border-btn ">More Work</a>
                                 </div>
                             </div>
                         </div>
