--- a/work.html
+++ b/work.html
@@ -271,64 +271,65 @@
         </div>
         <div class="gallery__warp">
             <div class="mix grid__item grid--1 photo">
-                <a class="gallery_img set-bg" href="assets/img/portfolio/1.jpg" data-setbg="assets/img/portfolio/3.jpg">
-                    <div class="gellery__text">
+                <a class="gallery_img set-bg" href="assets/img/portfolio/1.jpg" style="background-image: url(/assets/img/portfolio/1.jpg);>
+               
+                    <div class=" gellery__text ">
                         <span>Photography / Flower</span>
                         <h3>Flower In Door</h3>
                     </div>
                 </a>
             </div>
-            <div class="mix grid__item grid--2 travel">
-                <a class="gallery_img set-bg" href="assets/img/portfolio/3.jpg" data-setbg="assets/img/portfolio/3.jpg">
-                    <div class="gellery__text">
+            <div class="mix grid__item grid--2 travel ">
+                <a class="gallery_img set-bg " href="assets/img/portfolio/3.jpg " style="background-image: url(/assets/img/portfolio/1.jpg); ">
+                    <div class="gellery__text ">
                         <span>Photography / Flower</span>
                         <h3>Flower In Door</h3>
                     </div>
                 </a>
             </div>
-            <div class="mix grid__item grid--3 natural">
-                <a class="gallery_img set-bg" href="assets/img/portfolio/2.jpg" data-setbg="assets/img/portfolio/2.jpg">
-                    <div class="gellery__text">
+            <div class="mix grid__item grid--3 natural ">
+                <a class="gallery_img set-bg " href="assets/img/portfolio/2.jpg "style="background-image: url(/assets/img/portfolio/1.jpg); ">
+                    <div class="gellery__text ">
                         <span>Photography / Flower</span>
                         <h3>Flower In Door</h3>
                     </div>
                 </a>
             </div>
-            <div class="mix grid__item grid--4 fashion">
-                <a class="gallery_img set-bg" href="assets/img/portfolio/4.jpg" data-setbg="assets/img/portfolio/4.jpg">
-                    <div class="gellery__text">
+            <div class="mix grid__item grid--4 fashion ">
+                <a class="gallery_img set-bg " href="assets/img/portfolio/4.jpg " data-setbg="assets/img/portfolio/4.jpg ">
+                    <div class="gellery__text ">
                         <span>Photography / Flower</span>
                         <h3>Flower In Door</h3>
                     </div>
                 </a>
             </div>
-            <div class="mix grid__item grid--5 lifestyle">
-                <a class="gallery_img set-bg" href="assets/img/portfolio/5.jpg" data-setbg="assets/img/portfolio/5.jpg">
-                    <div class="gellery__text">
+            <div class="mix grid__item grid--5 lifestyle ">
+                <a class="gallery_img set-bg " href="assets/img/portfolio/5.jpg " data-setbg="assets/img/portfolio/5.jpg ">
+                    <div class="gellery__text ">
                         <span>Photography / Flower</span>
                         <h3>Flower In Door</h3>
                     </div>
                 </a>
             </div>
-            <div class="mix grid__item grid--6 photo">
-                <a class="gallery_img set-bg" href="assets/img/portfolio/19.jpg" data-setbg="assets/img/portfolio/19.jpg">
-                    <div class="gellery__text">
+            <div class="mix grid__item grid--6 photo ">
+                <a class="gallery_img set-bg " href="assets/img/portfolio/19.jpg " data-setbg="assets/img/portfolio/19.jpg ">
+                    <div class="gellery__text ">
                         <span>Photography / Flower</span>
                         <h3>Flower In Door</h3>
                     </div>
                 </a>
             </div>
-            <div class="mix grid__item grid--4 natural">
-                <a class="gallery_img set-bg" href="assets/img/portfolio/6.jpg" data-setbg="assets/img/portfolio/6.jpg">
-                    <div class="gellery__text">
+            <div class="mix grid__item grid--4 natural ">
+                <a class="gallery_img set-bg " href="assets/img/portfolio/6.jpg " data-setbg="assets/img/portfolio/6.jpg ">
+                    <div class="gellery__text ">
                         <span>Photography / Flower</span>
                         <h3>Flower In Door</h3>
                     </div>
                 </a>
             </div>
-            <div class="mix grid__item grid--8 fashion">
-                <a class="gallery_img set-bg" href="assets/img/portfolio/20.jpg" data-setbg="assets/img/portfolio/20.jpg">
-                    <div class="gellery__text">
+            <div class="mix grid__item grid--8 fashion ">
+                <a class="gallery_img set-bg " href="assets/img/portfolio/20.jpg " data-setbg="assets/img/portfolio/20.jpg ">
+                    <div class="gellery__text ">
                         <span>Photography / Flower</span>
                         <h3>Flower In Door</h3>
                     </div>
@@ -340,29 +341,29 @@
     </section>
 
     <footer>
-        <div class="footer-wrappper">
-            <div class="footer-area footer-padding">
-                <div class="container">
-                    <div class="row justify-content-between">
-                        <div class="col-xl-4 col-lg-5 col-md-4 col-sm-6">
-                            <div class="single-footer-caption mb-50">
-                                <div class="single-footer-caption mb-30">
-                                    <div class="footer-logo mb-25">
-                                        <a href="index.html"><img src="assets/img/logo/asset2.png" width="260" height="65" alt=" Make my Interiors logo" data-pagespeed-url-hash="1320415278" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+        <div class="footer-wrappper ">
+            <div class="footer-area footer-padding ">
+                <div class="container ">
+                    <div class="row justify-content-between ">
+                        <div class="col-xl-4 col-lg-5 col-md-4 col-sm-6 ">
+                            <div class="single-footer-caption mb-50 ">
+                                <div class="single-footer-caption mb-30 ">
+                                    <div class="footer-logo mb-25 ">
+                                        <a href="index.html "><img src="assets/img/logo/asset2.png " width="260 " height="65 " alt=" Make my Interiors logo " data-pagespeed-url-hash="1320415278 " onload="pagespeed.CriticalImages.checkImageForCriticality(this); ">
                                         </a>
                                         </a>
                                     </div>
-                                    <div class="footer-tittle">
-                                        <div class="footer-pera">
+                                    <div class="footer-tittle ">
+                                        <div class="footer-pera ">
                                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet a ullam aperiam.
                                             </p>
                                         </div>
                                     </div>
 
-                                    <div class="footer-social">
-                                        <a href="#"><i class="fab fa-twitter"></i></a>
-                                        <a href="https://bit.ly/"><i class="fab fa-facebook-f"></i></a>
-                                        <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                                    <div class="footer-social ">
+                                        <a href="# "><i class="fab fa-twitter "></i></a>
+                                        <a href="https://bit.ly/ "><i class="fab fa-facebook-f "></i></a>
+                                        <a href="# "><i class="fab fa-pinterest-p "></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -373,16 +374,16 @@
                 </div>
             </div>
 
-            <div class="footer-bottom-area">
-                <div class="container">
-                    <div class="footer-border">
-                        <div class="row d-flex align-items-center">
+            <div class="footer-bottom-area ">
+                <div class="container ">
+                    <div class="footer-border ">
+                        <div class="row d-flex align-items-center ">
                             <div class="col-xl-12 ">
-                                <div class="footer-copy-right text-center">
+                                <div class="footer-copy-right text-center ">
                                     <p>Copyright &copy;
                                         <script>
                                             document.write(new Date().getFullYear());
-                                        </script> All rights reserved | This template is made with <i class="fa fa-heart color-danger" aria-hidden="true"></i> by <a href="https://www.tradixnetwork.com" target="_blank" rel="nofollow noopener">Tradix Network</a>
+                                        </script> All rights reserved | This template is made with <i class="fa fa-heart color-danger " aria-hidden="true "></i> by <a href="https://www.tradixnetwork.com " target="_blank " rel="nofollow noopener ">Tradix Network</a>
                                     </p>
                                 </div>
                             </div>
@@ -394,14 +395,14 @@
         </section>
     </footer>
 
-    <div id="whatsapp-float">
-        <a title="send message" href="https://api.whatsapp.com/send?phone=919819095108&text=Hey%20MakeMyInteriors!">
-            <i class="fa-brands fa-whatsapp fa-xl my-float"></i>
+    <div id="whatsapp-float ">
+        <a title="send message " href="https://api.whatsapp.com/send?phone=919819095108&text=Hey%20MakeMyInteriors! ">
+            <i class="fa-brands fa-whatsapp fa-xl my-float "></i>
         </a>
     </div>
 
-    <script src="jsgal/vendor/jquery-3.2.1.min.js"></script>
-    <script src="jsgal/jquery.slicknav.min.js+jquery.magnific-popup.min.js+owl.carousel.min.js.pagespeed.jc.iu4J9YwEIW.js"></script>
+    <script src="jsgal/vendor/jquery-3.2.1.min.js "></script>
+    <script src="jsgal/jquery.slicknav.min.js+jquery.magnific-popup.min.js+owl.carousel.min.js.pagespeed.jc.iu4J9YwEIW.js "></script>
     <script>
         eval(mod_pagespeed_I84lkVQDiI);
     </script>
@@ -411,15 +412,16 @@
     <script>
         eval(mod_pagespeed_G8IUZFjnnz);
     </script>
-    <script src="jsgal/mixitup.min.js"></script>
-    <script src="jsgal/masonry.pkgd.min.js"></script>
-    <script src="jsgal/main.js"></script>
-    <script defer src="https://static.cloudflareinsights.com/beacon.min.js/v652eace1692a40cfa3763df669d7439c1639079717194" integrity="sha512-Gi7xpJR8tSkrpF7aordPZQlW2DLtzUlZcumS8dMQjwDHEnw9I7ZLyiOj/6tZStRBGtGgN6ceN6cMH8z7etPGlw==" data-cf-beacon='{"rayId":"70ff84e839bd84dd","token":"cd0b4b3a733644fc843ef0b185f98241","version":"2021.12.0","si":100}'
-        crossorigin="anonymous"></script>
+    <script src="jsgal/mixitup.min.js "></script>
+    <script src="jsgal/masonry.pkgd.min.js "></script>
+    <script src="jsgal/main.js "></script>
+    <script defer src="https://static.cloudflareinsights.com/beacon.min.js/v652eace1692a40cfa3763df669d7439c1639079717194 " integrity="sha512-Gi7xpJR8tSkrpF7aordPZQlW2DLtzUlZcumS8dMQjwDHEnw9I7ZLyiOj/6tZStRBGtGgN6ceN6cMH8z7etPGlw==" data-cf-beacon='{"
+                    rayId ":"70ff84e839bd84dd ","token ":"cd0b4b3a733644fc843ef0b185f98241 ","version ":"2021.12.0 ","si ":100}'
+        crossorigin="anonymous "></script>
 
-    <script src="./assets/js/vendor/modernizr-3.5.0.min.js"></script>
-    <script src="./assets/js/vendor/jquery-1.12.4.min.js"></script>
-    <script src="assets/js/popper.min.js+bootstrap.min.js.pagespeed.jc.G00m3_xP3N.js"></script>
+    <script src="./assets/js/vendor/modernizr-3.5.0.min.js "></script>
+    <script src="./assets/js/vendor/jquery-1.12.4.min.js "></script>
+    <script src="assets/js/popper.min.js+bootstrap.min.js.pagespeed.jc.G00m3_xP3N.js "></script>
     <script>
         eval(mod_pagespeed_akNtyUyAIs);
     </script>
@@ -427,7 +429,7 @@
         eval(mod_pagespeed_rl1ACNyDhN);
     </script>
 
-    <script src="assets/js/owl.carousel.min.js+slick.min.js.pagespeed.jc.WG7KWkm0Pt.js"></script>
+    <script src="assets/js/owl.carousel.min.js+slick.min.js.pagespeed.jc.WG7KWkm0Pt.js "></script>
     <script>
         eval(mod_pagespeed_rbAC$5BHvi);
     </script>
@@ -435,7 +437,7 @@
         eval(mod_pagespeed_qlq4NKxnpL);
     </script>
 
-    <script src="assets/js/wow.min.js+jquery.magnific-popup.js+jquery.slicknav.min.js+jquery.counterup.min.js+waypoints.min.js+jquery.nice-select.min.js+contact.js.pagespeed.jc.DRFpi_HtDu.js"></script>
+    <script src="assets/js/wow.min.js+jquery.magnific-popup.js+jquery.slicknav.min.js+jquery.counterup.min.js+waypoints.min.js+jquery.nice-select.min.js+contact.js.pagespeed.jc.DRFpi_HtDu.js "></script>
     <script>
         eval(mod_pagespeed_nb2PiiYO3e);
     </script>
@@ -459,7 +461,7 @@
     <script>
         eval(mod_pagespeed_9gj165c9cs);
     </script>
-    <script src="assets/js/jquery.form.js+jquery.validate.min.js+mail-script.js+jquery.ajaxchimp.min.js+plugins.js+main.js.pagespeed.jc.NgWVHsTJe3.js"></script>
+    <script src="assets/js/jquery.form.js+jquery.validate.min.js+mail-script.js+jquery.ajaxchimp.min.js+plugins.js+main.js.pagespeed.jc.NgWVHsTJe3.js "></script>
     <script>
         eval(mod_pagespeed_j08mKaKh8j);
     </script>
