--- a/section.html
+++ b/section.html
@@ -4,7 +4,7 @@
         <div class="u-expanded-width u-gallery u-lightbox u-show-text-on-hover u-layout-grid u-block-control u-block-38eb-3" style="height: 520px; margin-top: 61.5px; margin-left: 0px; margin-right: 0px; margin-bottom: 0px" data-block="14" data-block-type="Gallery">
             <div class="u-gallery-inner u-block-38eb-33" style="grid-template-columns: auto auto auto auto; grid-gap: 9px 9px">
                 <div class="u-effect-fade u-gallery-item u-block-control u-block-38eb-4" style="" data-block="15" data-block-type="GalleryItem">
-                    <div class="u-back-slide u-block-38eb-5" style=""><img class="u-back-image u-expanded u-block-38eb-34" src="/1d1fa9463af22c/pexels-photo-2078774.jpeg" style="object-position: 50% 50%"></div>
+                    <div class="u-back-slide u-block-38eb-5" style=""><img class="u-back-image u-expanded u-block-38eb-34" src="/assets/img/portfolio/1.jpg" style="object-position: 50% 50%"></div>
                     <div class="u-over-slide u-shading u-block-38eb-6" style="background-image: linear-gradient(0deg, rgba(var(--black-r),var(--black-g),var(--black-b),0.2), rgba(var(--black-r),var(--black-g),var(--black-b),0.2)); padding-top: 20px; padding-bottom: 20px; padding-left: 20px; padding-right: 20px"
                         data-block-type="">
                         <h3 class="u-gallery-heading"></h3>
@@ -12,7 +12,7 @@
                     </div>
                 </div>
                 <div class="u-effect-fade u-gallery-item u-block-control u-block-38eb-7" style="" data-block="16" data-block-type="GalleryItem" draggable="false">
-                    <div class="u-back-slide u-block-38eb-8" style=""><img class="u-back-image u-expanded u-block-38eb-35" src="/17b8c6df1cea0e/pexels-photo-1769369.jpeg" style="object-position: 50% 50%" draggable="false"></div>
+                    <div class="u-back-slide u-block-38eb-8" style=""><img class="u-back-image u-expanded u-block-38eb-35" src="/assets/img/portfolio/10.jpg" style="object-position: 50% 50%" draggable="false"></div>
                     <div class="u-over-slide u-shading u-block-38eb-9" style="background-image: linear-gradient(0deg, rgba(var(--black-r),var(--black-g),var(--black-b),0.2), rgba(var(--black-r),var(--black-g),var(--black-b),0.2)); padding-top: 20px; padding-bottom: 20px; padding-left: 20px; padding-right: 20px"
                         data-block-type="">
                         <h3 class="u-gallery-heading"></h3>
@@ -71,8 +71,8 @@
             </div>
         </div>
         <p class="u-text u-block-control u-block-38eb-28" style="width: 440px; margin-top: 496px; margin-left: auto; margin-right: auto; margin-bottom: 0px" data-block="23" data-block-type="Text">Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
-        <div class="u-social-icons u-spacing-10 u-block-control u-block-38eb-29" style="white-space: nowrap; height: 32px; min-height: 16px; width: 116px; min-width: 68px; margin-top: 30px; margin-left: auto; margin-right: auto; margin-bottom: 60px"
-            data-block="24" data-block-type="SocialIcons"><a class="u-social-url" target="_blank" href=""><span class="u-icon u-icon-circle u-social-facebook u-social-icon u-block-38eb-30" style="height: 100%"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-6099"></use></svg><svg x="0px" y="0px" viewBox="0 0 112 112" id="svg-6099" class="u-svg-content">
+        <div class="u-social-icons u-spacing-10 u-block-control u-block-38eb-29" style="white-space: nowrap; height: 32px; min-height: 16px; width: 116px; min-width: 68px; margin-top: 30px; margin-left: auto; margin-right: auto; margin-bottom: 60px" data-block="24"
+            data-block-type="SocialIcons"><a class="u-social-url" target="_blank" href=""><span class="u-icon u-icon-circle u-social-facebook u-social-icon u-block-38eb-30" style="height: 100%"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-6099"></use></svg><svg x="0px" y="0px" viewBox="0 0 112 112" id="svg-6099" class="u-svg-content">
         <path d="M75.5,28.8H65.4c-1.5,0-4,0.9-4,4.3v9.4h13.9l-1.5,15.8H61.4v45.1H42.8V58.3h-8.8V42.4h8.8V32.2 c0-7.4,3.4-18.8,18.8-18.8h13.8v15.4H75.5z"></path>
     </svg></span></a><a class="u-social-url" target="_blank" href=""><span class="u-icon u-icon-circle u-social-twitter u-social-icon u-block-38eb-31" style="height: 100%"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-d742"></use></svg><svg x="0px" y="0px" viewBox="0 0 112 112" id="svg-d742" class="u-svg-content">
         <path d="M92.2,38.2c0,0.8,0,1.6,0,2.3c0,24.3-18.6,52.4-52.6,52.4c-10.6,0.1-20.2-2.9-28.5-8.2 c1.4,0.2,2.9,0.2,4.4,0.2c8.7,0,16.7-2.9,23-7.9c-8.1-0.2-14.9-5.5-17.3-12.8c1.1,0.2,2.4,0.2,3.4,0.2c1.6,0,3.3-0.2,4.8-0.7 c-8.4-1.6-14.9-9.2-14.9-18c0-0.2,0-0.2,0-0.2c2.5,1.4,5.4,2.2,8.4,2.3c-5-3.3-8.3-8.9-8.3-15.4c0-3.4,1-6.5,2.5-9.2 c9.1,11.1,22.7,18.5,38,19.2c-0.2-1.4-0.4-2.8-0.4-4.3c0.1-10,8.3-18.2,18.5-18.2c5.4,0,10.1,2.2,13.5,5.7c4.3-0.8,8.1-2.3,11.7-4.5 c-1.4,4.3-4.3,7.9-8.1,10.1c3.7-0.4,7.3-1.4,10.6-2.9C98.9,32.3,95.7,35.5,92.2,38.2z"></path>
