--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
                                     <h2>Let's discuss about your interior</h2>
                                     <p>Even the all-powerful Pointing has no control about the <br> blindtexts it is an almost unorthographic.</p>
 
-                                    <a href="tel:+919834375579" class="btn_1 "><i class="fa-solid fa-phone fa-xl"></i>+91 9999 999999</a>
+                                    <a href="tel:+919834375579" class="btn_1 "><i class="fa-solid fa-phone fa-xl"></i>+91 9834375579</a>
 
                                     <a href="https://api.whatsapp.com/send?phone=919834375579&text=Hey%20MakeMyInteriors!" class="btn_3 "><i class="fa-brands fa-whatsapp fa-xl"></i> Get in touch</a>
                                     <a href="https://g.page/make-my-interiors-maharashtra?" class="btn_4 "><i class="fa-solid fa-location-dot fa-xl"></i> Locate us</a>
