--- a/work.html
+++ b/work.html
@@ -262,7 +262,7 @@
         <div class="filter-controls">
             <ul>
                 <li class="active" data-filter="*">ALL</li>
-                <li data-filter=".photo">PHOTOGRAPHY</li>
+                <li data-filter=".photo">modular kitchen</li>
                 <li data-filter=".travel">TRAVEL</li>
                 <li data-filter=".natural">NATURE</li>
                 <li data-filter=".fashion">FASHION</li>
@@ -271,16 +271,13 @@
         </div>
         <div class="gallery__warp">
             <div class="mix grid__item grid--1 photo">
-                <a class="gallery_img set-bg" href="assets/img/portfolio/1.jpg" style="background-image: url(/assets/img/portfolio/1.jpg);>
-               
-                    <div class=" gellery__text ">
-                        <span>Photography / Flower</span>
-                        <h3>Flower In Door</h3>
-                    </div>
+                <a class="gallery_img set-bg" href="assets/img/portfolio/1.jpg" style="background-image: url(/assets/img/portfolio/1.jpg)" ;>
+
+
                 </a>
             </div>
             <div class="mix grid__item grid--2 travel ">
-                <a class="gallery_img set-bg " href="assets/img/portfolio/3.jpg " style="background-image: url(/assets/img/portfolio/1.jpg); ">
+                <a class="gallery_img set-bg " href="\assets\img\portfolio/5.jpg " style="background-image: url(" /assets/img/portfolio/5.jpg "); >
                     <div class="gellery__text ">
                         <span>Photography / Flower</span>
                         <h3>Flower In Door</h3>
@@ -288,7 +285,7 @@
                 </a>
             </div>
             <div class="mix grid__item grid--3 natural ">
-                <a class="gallery_img set-bg " href="assets/img/portfolio/2.jpg "style="background-image: url(/assets/img/portfolio/1.jpg); ">
+                <a class="gallery_img set-bg " href="assets/img/portfolio/2.jpg " style="background-image: url(/assets/img/portfolio/1.jpg); ">
                     <div class="gellery__text ">
                         <span>Photography / Flower</span>
                         <h3>Flower In Door</h3>
@@ -412,12 +409,12 @@
     <script>
         eval(mod_pagespeed_G8IUZFjnnz);
     </script>
-    <script src="jsgal/mixitup.min.js "></script>
-    <script src="jsgal/masonry.pkgd.min.js "></script>
-    <script src="jsgal/main.js "></script>
+    <script src="assets/jsgal/mixitup.min.js "></script>
+    <script src="assets/jsgal/masonry.pkgd.min.js "></script>
+    <script src="assets/jsgal/main.js "></script>
+    <script src="\assets\jsgal\main.js "></script>
     <script defer src="https://static.cloudflareinsights.com/beacon.min.js/v652eace1692a40cfa3763df669d7439c1639079717194 " integrity="sha512-Gi7xpJR8tSkrpF7aordPZQlW2DLtzUlZcumS8dMQjwDHEnw9I7ZLyiOj/6tZStRBGtGgN6ceN6cMH8z7etPGlw==" data-cf-beacon='{"
-                    rayId ":"70ff84e839bd84dd ","token ":"cd0b4b3a733644fc843ef0b185f98241 ","version ":"2021.12.0 ","si ":100}'
-        crossorigin="anonymous "></script>
+                    rayId ":"70ff84e839bd84dd ","token ":"cd0b4b3a733644fc843ef0b185f98241 ","version ":"2021.12.0 ","si ":100}' crossorigin="anonymous "></script>
 
     <script src="./assets/js/vendor/modernizr-3.5.0.min.js "></script>
     <script src="./assets/js/vendor/jquery-1.12.4.min.js "></script>
