robots.txt added

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <div class="menu-wrapper d-flex align-items-center justify-content-between ">
                         <div class="left-content d-flex align-items-center ">
                             <div class="logo mr-45 ">
-                                <a href="index.html ">
+                                <a href="https://makemyinteriors.in/">
                                     <script data-pagespeed-no-defer>
                                         //<![CDATA[
                                         (function() {
@@ -237,10 +237,10 @@
                             <div class="main-menu d-none d-lg-block ">
                                 <nav>
                                     <ul id="navigation ">
-                                        <li><a class="nav-link scrollto " href="index.html ">Home</a></li>
+                                        <li><a class="nav-link scrollto " href="https://makemyinteriors.in/">Home</a></li>
                                         <li><a class="nav-link scrollto " href="#services ">Services</a></li>
                                         <li><a class="nav-link scrollto " href="#work">Work</a></li>
-                                        <li><a class="nav-link scrollto " href="about.html ">About</a></li>
+                                        <li><a class="nav-link scrollto " href="about">About</a></li>
                                         <li><a class="nav-link scrollto " href="#contact ">Contact</a></li>
                                     </ul>
                                 </nav>
@@ -544,7 +544,7 @@
                         <div class="col-lg-12">
                             <div class="more-pro theme-bg1 pt-30 pb-20">
                                 <div class="more-show text-center">
-                                    <a href="work.html" class="border-btn ">More Work</a>
+                                    <a href="work" class="border-btn ">More Work</a>
                                 </div>
                             </div>
                         </div>
@@ -587,7 +587,7 @@
                             <div class="single-footer-caption mb-50">
                                 <div class="single-footer-caption mb-30">
                                     <div class="footer-logo mb-25">
-                                        <a href="index.html"><img src="assets/img/logo/asset1.png" width="260" height="65" alt=" Make my Interiors logo" data-pagespeed-url-hash="1320415278" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+                                        <a href="https://makemyinteriors.in/"><img src="assets/img/logo/asset1.png" width="260" height="65" alt=" Make my Interiors logo" data-pagespeed-url-hash="1320415278" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
                                         </a>
                                         </a>
                                     </div>
