--- a/work.html
+++ b/work.html
@@ -20,17 +20,17 @@
                     <div class="menu-wrapper d-flex align-items-center justify-content-between ">
                         <div class="left-content d-flex align-items-center ">
                             <div class="logo mr-45 ">
-                                <a href="index.html "><img src="assets/img/logo/asset1.png " width="260 " height="65 " alt=" " data-pagespeed-url-hash="1320415278 " onload="pagespeed.CriticalImages.checkImageForCriticality(this); ">
+                                <a href="https://makemyinteriors.in/"><img src="assets/img/logo/asset1.png " width="260 " height="65 " alt=" " data-pagespeed-url-hash="1320415278 " onload="pagespeed.CriticalImages.checkImageForCriticality(this); ">
                                 </a>
                             </div>
 
                             <div class="main-menu d-none d-lg-block ">
                                 <nav>
                                     <ul id="navigation ">
-                                        <li><a class="nav-link scrollto " href="index.html ">Home</a></li>
+                                        <li><a class="nav-link scrollto " href="https://makemyinteriors.in/">Home</a></li>
                                         <li><a class="nav-link scrollto " href="#services ">Services</a></li>
-                                        <li><a class="nav-link scrollto " href="#work ">Work</a></li>
-                                        <li><a class="nav-link scrollto " href="about.html ">About</a></li>
+                                        <li><a class="nav-link scrollto " href="work">Work</a></li>
+                                        <li><a class="nav-link scrollto " href="about">About</a></li>
                                         <li><a class="nav-link scrollto " href="#contact ">Contact</a></li>
                                     </ul>
                                 </nav>
@@ -146,7 +146,7 @@
                                 <div class="single-footer-caption mb-50">
                                     <div class="single-footer-caption mb-30">
                                         <div class="footer-logo mb-25">
-                                            <a href="index.html"><img src="assets/img/logo/asset1.png" width="260" height="65" alt=" Make my Interiors logo" data-pagespeed-url-hash="1320415278" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+                                            <a href="https://makemyinteriors.in/"><img src="assets/img/logo/asset1.png" width="260" height="65" alt=" Make my Interiors logo" data-pagespeed-url-hash="1320415278" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
                                             </a>
                                             </a>
                                         </div>
