--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
                                     <nav>
                                         <ul id="navigation ">
                                             <li><a class="nav-link scrollto " href="https://makemyinteriors.in">Home</a></li>
-                                            <li><a class="nav-link scrollto " href="#services ">Services</a></li>
+                                            <li><a class="nav-link scrollto " href="https://makemyinteriors.in/#services ">Services</a></li>
                                             <li><a class="nav-link scrollto " href="https://makemyinteriors.in/#work">Work</a></li>
                                             <li><a class="nav-link scrollto " href="about">About</a></li>
                                             <li><a class="nav-link scrollto " href="#contact ">Contact</a></li>
@@ -105,12 +105,24 @@
                         </div>
                     </div>
                 </div>
+                <div class="column">
+                    <div class="card">
+                        <img src="img2.jpg" alt="sakshi" style="width:100%">
+                        <div class="container">
+                            <h2>Sakshi Agarwal</h2>
+                            <p class="title">Marketing Head</p>
+                            <!-- <p>Some text that describes me lorem ipsum ipsum lorem.</p> -->
+                            <p>example@example.com</p>
+                            <p><button class="button">Contact</button></p>
+                        </div>
+                    </div>
+                </div>
 
                 <div class="column">
                     <div class="card">
                         <img src="img3.jpg" alt="alifiya" style="width:100%">
                         <div class="container">
-                            <h2>Aifiya Magar</h2>
+                            <h2>Alifiya Magar</h2>
                             <p class="title">Senior Interior Designer</p>
                             <!-- <p>Some text that describes me lorem ipsum ipsum lorem.</p> -->
                             <p>example@example.com</p>
@@ -134,32 +146,32 @@
                     <div class="card">
                         <img src="img3.jpg" alt="shradha" style="width:100%">
                         <div class="container">
-                            <h2>Shradha Methe</h2>
-                            <p class="title">Accounts &amp; Finance</p>
+                            <h2>Shraddha Patil</h2>
+                            <p class="title">Interior Designer</p>
                             <!-- <p>Some text that describes me lorem ipsum ipsum lorem.</p> -->
                             <p>example@example.com</p>
                             <p><button class="button">Contact</button></p>
                         </div>
                     </div>
                 </div>
-                <div class="column">
+                <!-- <div class="column">
                     <div class="card">
                         <img src="img3.jpg" alt="aditya" style="width:100%">
                         <div class="container">
-                            <h2>Aditya Patil</h2>
+                            <h2>Aditya Bansal</h2>
                             <p class="title">Senior Site Supervisor</p>
-                            <!-- <p>Some text that describes me lorem ipsum ipsum lorem.</p> -->
+                           
                             <p>example@example.com</p>
                             <p><button class="button">Contact</button></p>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="column">
                     <div class="card">
                         <img src="img3.jpg" alt="Rahul" style="width:100%">
                         <div class="container">
-                            <h2>Rahul Auti</h2>
-                            <p class="title">Site Supervisor</p>
+                            <h2>Rahul Bansal</h2>
+                            <p class="title">Interior Designer</p>
                             <!-- <p>Some text that describes me lorem ipsum ipsum lorem.</p> -->
                             <p>example@example.com</p>
                             <p><button class="button">Contact</button></p>
