--- a/index.html
+++ b/index.html
@@ -253,24 +253,16 @@
                     </div>
 
                     <div class="col-12">
-                        <div class="mobile_menu d-block d-lg-none">
+                        <div class="mobile_menu d-block d-lg-none ">
                             <div class="slicknav_menu"><a href="#" aria-haspopup="true" role="button" tabindex="0" class="slicknav_btn slicknav_collapsed"><span class="slicknav_menutxt">MENU</span><span class="slicknav_icon"><span class="slicknav_icon-bar"></span><span class="slicknav_icon-bar"></span><span class="slicknav_icon-bar"></span></span></a>
-                                <ul
-                                    class="slicknav_nav slicknav_hidden" aria-hidden="true" role="menu" style="display: none;">
+                                <ul class="slicknav_nav slicknav_hidden" aria-hidden="true" role="menu" style="display: none;">
                                     <li><a href="index.html" role="menuitem" tabindex="-1">Home</a></li>
                                     <li><a href="services.html" role="menuitem" tabindex="-1">Services</a></li>
                                     <li><a href="work.html" role="menuitem" tabindex="-1">Work</a></li>
                                     <li><a href="about.html" role="menuitem" tabindex="-1">About</a></li>
-                                    <li class="slicknav_collapsed slicknav_parent"><a href="#" role="menuitem" aria-haspopup="true" tabindex="-1" class="slicknav_item slicknav_row"><a href="#" tabindex="-1">Blog</a>
-                                        <span class="slicknav_arrow">+</span></a>
-                                        <ul class="submenu slicknav_hidden" role="menu" aria-hidden="true" style="display: none;">
-                                            <li><a href="blog.html" role="menuitem" tabindex="-1">Blog</a></li>
-                                            <li><a href="blog_details.html" role="menuitem" tabindex="-1">Blog Details</a></li>
-                                            <li><a href="elements.html" role="menuitem" tabindex="-1">Element</a></li>
-                                        </ul>
-                                    </li>
+
                                     <li><a href="contact.html" role="menuitem" tabindex="-1">Contact</a></li>
-                                    </ul>
+                                </ul>
                             </div>
                         </div>
                     </div>
